# tsd-s3cmd

./: .gitignore  pyproject.toml
tsd_s3cmd/: cli.py  config.py  get.py  guide.txt  set.py  tsd_api.py  types.py  util.py
