[tool.poetry]
name = "tsd-s3cmd"
version = "1.0.0"
description = "TSD wrapper for s3cmd"
authors = [
    "Leon du Toit <l.c.d.toit@usit.uio.no>",
    "Eirik Haatveit <haatveit@uio.no>",
]
license = "BSD 3-Clause License"

[tool.poetry.dependencies]
python = "^3.6"
tsd-api-client = ">=3.4.3"
s3cmd = {url = "https://github.com/unioslo/s3cmd/archive/v2.1.0-custom-headers.tar.gz#egg=s3cmd-2.1.0-custom-headers"}
typer = "^0.4"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tsd-s3cmd = "tsd_s3cmd.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
